--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,18 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "incremental": true,
-    "paths": {
-      "@/*": ["./src/*"]
-    }
-  },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+     "target": "es2016",
+     "jsx": "react",
+     "module": "ESNext",
+     "moduleResolution": "node",
+     "declaration": true, 
+     "emitDeclarationOnly": true,
+     "outDir": "dist", 
+     "declarationDir": "types",
+     "allowSyntheticDefaultImports": true,
+     "esModuleInterop": true,
+     "forceConsistentCasingInFileNames": true,
+     "strict": true, 
+     "skipLibCheck": true
+
+  }
 }
