--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "design-system",
+  "name": "@mumtahin/design-system",
   "version": "1.0.0",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "rollup-build": "rollup -c"
+    "build": "rollup -c",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "repository": {
     "type": "git",
@@ -17,14 +19,26 @@
   },
   "homepage": "https://github.com/Mumtahin/design-system#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.22.15",
+    "@babel/preset-react": "^7.22.15",
+    "@babel/preset-typescript": "^7.22.15",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
+    "@storybook/addon-essentials": "^7.4.0",
+    "@storybook/addon-interactions": "^7.4.0",
+    "@storybook/addon-links": "^7.4.0",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.4.0",
+    "@storybook/react": "^7.4.0",
+    "@storybook/react-webpack5": "^7.4.0",
+    "@storybook/testing-library": "^0.2.0",
     "@types/react": "^18.0.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^3.14.0",
     "rollup-plugin-dts": "^5.1.1",
+    "storybook": "^7.4.0",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5"
   },
@@ -37,5 +51,8 @@
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "publishConfig": {
+    "@mumtahin:registry": "https://npm.pkg.github.com"
+  }
 }
