--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
-@mumtahin:registry=https://npm.pkg.github.com
+registry=https://npm.pkg.github.com/mumtahin
+//npm.pkg.github.com/:_authToken=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
